crates/biome_cli/tests/snapshots/main_cases_suppressions/syntax_rule_range_suppression_category_only.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.ts
```

## `file.ts`

```ts

// biome-ignore-start lint: explanation
const foo = 1;
// biome-ignore-end lint: explanation
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
